--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         crossorigin="anonymous"
     >
 
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Star Wars</title>
 </head>
 <body>
@@ -32,14 +34,20 @@
 
         <!-- Begin Enemy character Row -->
         <div class="row">
-            <h3 class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">Enemies Available To Attach</h3>
-            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+            <h3 class="col-xs-12 col-sm-12 col-md-8 col-lg-12 col-xl-12">Enemies Available To Attach</h3>
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-12 col-xl-12">
 
-                <img class="img-thumbnail col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2" id="luke_id"  src="assets/images/Luke_Sky.jpg" alt="Luke_Sky">
+                <p class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Luke Skywalker <br> 
+                    <img class="img-fluid img-thumbnail" id="luke_id"  src="assets/images/Luke_Sky.jpg" alt="Luke_Sky"> <br> 
+                    <span id="luke-score">100</span> </p>
             
-                <img class="img-thumbnail col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2" id="sidious_id" src="assets/images/Darth_Sidious.png" alt="Darth_Sidious">
+                <p class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Luke Skywalker <br> 
+                    <img class="img-fluid img-thumbnail" id="sidious_id" src="assets/images/Darth_Sidious.png" alt="Darth_Sidious"> <br> 
+                    <span id="luke-score">100</span> </p>
 
-                <img class="img-thumbnail col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2" id="maul_id"  src="assets/images/Darth_Maul.png" alt="Darth_Maul">    
+                <p class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Luke Skywalker <br> 
+                    <img class="img-fluid img-thumbnail" id="maul_id"  src="assets/images/Darth_Maul.png" alt="Darth_Maul">   <br> 
+                    <span id="luke-score">100</span> </p>
             
             </div >
         </div>
@@ -70,3 +78,6 @@
 
 </body>
 </html>
+
+
+
