--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <!-- Begin Your character Row -->
         <div class="row">
             <h3 class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">Your Character</h3>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2">
-                <img class="img-thumbnail" id="obi_id" src="assets/images/obi_wan.jpg" alt="obi_wan">
-            </div>
+            <p class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Obi Wan Kanobi <br> 
+                <img id="obi_id" class="img-fluid img-thumbnail" src="assets/images/obi_wan.jpg" alt="obi_wan"> <br> 
+                <span id="Obi-score">100</span> 
+            </p>            
 
         </div>
         <!-- End Your character Row -->
@@ -37,15 +38,16 @@
             <h3 class="col-xs-12 col-sm-12 col-md-8 col-lg-12 col-xl-12">Enemies Available To Attach</h3>
             <div id ="enemy-container" class="col-xs-12 col-sm-12 col-md-8 col-lg-12 col-xl-12">
 
-                <p id="enemy-1" class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Luke Skywalker <br> 
+                <!-- Enemy Group is used to toggle between images -->
+                <p id="enemy-1" class="enemy-grp col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Luke Skywalker <br> 
                     <img class="img-fluid img-thumbnail" id="luke_id"  src="assets/images/Luke_Sky.jpg" alt="Luke_Sky"> <br> 
                     <span id="luke-score">100</span> </p>
             
-                <p id="enemy-2" class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Darth Sidious <br> 
+                <p id="enemy-2" class="enemy-grp col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Darth Sidious <br> 
                     <img class="img-fluid img-thumbnail" id="sidious_id" src="assets/images/Darth_Sidious.png" alt="Darth_Sidious"> <br> 
                     <span id="luke-score">100</span> </p>
 
-                <p id="enemy-3" class="col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Darth Maul <br> 
+                <p id="enemy-3" class="enemy-grp col-xs-12 col-sm-12 col-md-6 col-lg-2 col-xl-2"> Darth Maul <br> 
                     <img class="img-fluid img-thumbnail" id="maul_id"  src="assets/images/Darth_Maul.png" alt="Darth_Maul">   <br> 
                     <span id="luke-score">100</span> </p>
             
@@ -57,7 +59,7 @@
 
         <!-- Begin Fight Section -->
         <h3>Fight Section</h3>
-        <button>Attack</button>
+        <button id="attack">Attack</button>
 
         <br>
         <br>
