--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
 <body>
 
     <!-- Begin Container -->
-    <div class="container">
+    <div div="container_features" class="container">
 
         <!-- Start Row -->
         <div class="row justify-content-end">
